fixat nya wrappen lite i css

--- a/Uppgift 1/style.css
+++ b/Uppgift 1/style.css
@@ -57,18 +57,22 @@ html, body {
 
 .userListWrapper {
   padding: 1rem;
+  padding-bottom: 15rem;
   margin-left: 2rem;
   min-width: 400px;
+  text-align: center;
   border-radius: 15px;
   box-shadow: 0 15px 25px rgba(0,0,0,.6);
   background-color: #f0eeee;
 }
 
 .userListWrapper ul {
+  padding: 1rem;
   list-style: none;
 }
 
 .userListWrapper li {
+  font-weight: 500;
   padding-bottom: 1rem;
 }
 
